--- a/platforms/sdl/emscripten/wasm_shell.html
+++ b/platforms/sdl/emscripten/wasm_shell.html
@@ -10,6 +10,7 @@
         width: 100%;
         height: 100%;
         margin: 0;
+        overflow: hidden;
       }
       canvas {
         display: block;
